--- a/Echarts-练习/css/index.css
+++ b/Echarts-练习/css/index.css
@@ -2,5 +2,42 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: blue;
+}
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+.wrap {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.wrap .header {
+  height: 1rem;
+  width: 100%;
+  background: #fafafa;
+}
+.wrap .main-box {
+  flex: 1;
+  width: 100%;
+  display: flex;
+}
+.wrap .main-box .left,
+.wrap .main-box .right {
+  flex: 3;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.wrap .main-box .left .panel,
+.wrap .main-box .right .panel {
+  width: 100%;
+  flex: 1;
+  border: 1px solid red;
+}
+.wrap .main-box .center {
+  flex: 5;
+  height: 100%;
 }
