--- a/Echarts-练习/css/index.less
+++ b/Echarts-练习/css/index.less
@@ -2,5 +2,52 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-	color:blue;
+}
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+}
+
+.wrap {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    flex-direction: column;
+
+    .header {
+        height: 1rem;
+        width: 100%;
+        background: #fafafa;
+    }
+
+    .main-box {
+        flex: 1;
+        width: 100%;
+        display: flex;
+
+        .left,
+        .right {
+            flex: 3;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+
+            .panel {
+                width: 100%;
+                flex: 1;
+                border: 1px solid red;
+            }
+
+        }
+
+        .center {
+            flex: 5;
+            height: 100%;
+        }
+
+    }
 }
