--- a/Echarts-练习/css/index.css
+++ b/Echarts-练习/css/index.css
@@ -13,6 +13,9 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
+  background: url(../images/bg.jpg) no-repeat;
+  background-position: left top;
+  background-size: 100% 100%;
 }
 .wrap .header {
   height: 1rem;
@@ -35,9 +38,44 @@ body {
 .wrap .main-box .right .panel {
   width: 100%;
   flex: 1;
-  border: 1px solid red;
+  border: 0.01rem solid red;
 }
 .wrap .main-box .center {
   flex: 5;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.wrap .main-box .center .no {
+  height: 1.5rem;
+  width: 100%;
+}
+.wrap .main-box .center .map {
+  width: 100%;
+  flex: 1;
+  position: relative;
+}
+.wrap .main-box .center .map .map1 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url(../images/map.png) no-repeat center center;
+  background-size: 5.18rem 5.18rem;
+  opacity: 0.3;
+}
+.wrap .main-box .center .map .map2 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url(../images/lbx.png) no-repeat center center;
+  background-size: 6.43rem 6.43rem;
+  opacity: 0.6;
+}
+.wrap .main-box .center .map .map3 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url(../images/jt.png) no-repeat center center;
+  background-size: 5.66rem 5.66rem;
+  opacity: 0.3;
 }
