--- a/Echarts-练习/css/index.less
+++ b/Echarts-练习/css/index.less
@@ -13,10 +13,12 @@ body {
 .wrap {
     width: 100%;
     height: 100%;
-    display: flex;
     flex-direction: column;
     display: flex;
     flex-direction: column;
+    background: url(../images/bg.jpg) no-repeat;
+    background-position: left top;
+    background-size: 100% 100%;
 
     .header {
         height: 1rem;
@@ -39,7 +41,7 @@ body {
             .panel {
                 width: 100%;
                 flex: 1;
-                border: 1px solid red;
+                border: 0.01rem solid red;
             }
 
         }
@@ -47,6 +49,48 @@ body {
         .center {
             flex: 5;
             height: 100%;
+            display: flex;
+            flex-direction: column;
+
+            .no {
+                height: 1.5rem;
+                width: 100%;
+            }
+
+            .map {
+                width: 100%;
+                flex: 1;
+                position: relative;
+
+                .map1 {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    background: url(../images/map.png) no-repeat center center;
+                    background-size: 5.18rem 5.18rem;
+                    opacity: 0.3;
+                    
+                }
+
+                .map2 {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    background: url(../images/lbx.png) no-repeat center center;
+                    background-size: 6.43rem 6.43rem;
+                    opacity: 0.6;
+                }
+
+                .map3 {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    background: url(../images/jt.png) no-repeat center center;
+                    background-size: 5.66rem 5.66rem;
+                    opacity: 0.3;
+                }
+            }
+
         }
 
     }
