给背景添加动画

--- a/Echarts-练习/css/index.css
+++ b/Echarts-练习/css/index.css
@@ -70,6 +70,7 @@ body {
   background: url(../images/lbx.png) no-repeat center center;
   background-size: 6.43rem 6.43rem;
   opacity: 0.6;
+  animation: rotate1 15s linear infinite;
 }
 .wrap .main-box .center .map .map3 {
   position: absolute;
@@ -77,5 +78,22 @@ body {
   height: 100%;
   background: url(../images/jt.png) no-repeat center center;
   background-size: 5.66rem 5.66rem;
-  opacity: 0.3;
+  opacity: 0.6;
+  animation: rotate2 10s linear infinite;
+}
+@keyframes rotate1 {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotate2 {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
 }
